# md-file-highlighter

./: .gitignore  .vscodeignore  README.md  md-file-highlighter-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
examples/: dsa-notes.md  sample.md
preview-styles/: preview.css
python-library/: README.md  pyproject.toml
python-library/src/md_highlight/: __init__.py  highlight.py  syntax.py  types.py
python-library/tests/: _fuzz_exhaustive.py  test_highlight.py  test_invariants_dsa.py
src/: extension.ts
src/adapters/: EditorGateway.ts
src/commands/: ClearAllCommand.ts  ICommand.ts  ToggleHighlightCommand.ts
src/config/: Settings.ts
src/core/: types.ts
src/core/syntax/: IHighlightSyntax.ts  MarkHtmlSyntax.ts
src/core/text/: offsets.ts
src/runtime/: Runtime.ts
src/services/: DecorationManager.ts  HighlightService.ts  StatusBarButton.ts
test/unit/: highlight.test.ts
